various changes to the pull request from 2010-11-03 (uoccou).  Cleaning up things, removing commented out code, removing unused fields & imports.  removing 1.6 specific bits.  some refactors to make the jena bits as independent of the sql stuff as possible, though this still needs some work -- sdb and tdb really will end up needing their own factories, sdb at least.  and moving the sql bits into their own directory rather than having them in the core.